--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "html-builder task for RSSchool",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .js",
+    "1": "node 01-read-file",
+    "2": "node 02-write-file",
+    "3": "node 03-files-in-folder",
+    "4": "node 04-copy-directory",
+    "5": "node 05-merge-styles",
+    "6": "node 06-build-page"
   },
   "author": "evgeniimal",
   "license": "ISC",
@@ -13,6 +20,6 @@
   "homepage": "https://github.com/EvgeniiMal/html-builder-black#readme",
   "devDependencies": {
     "@types/node": "^16.11.4",
-    "eslint": "^7.32.0"
+    "eslint": "^8.40.0"
   }
 }
